devops/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-backend-svc
  labels:
    app: portfolio-backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: portfolio-backend
